--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Responsive?</title>
-</head>
-<body>
+</head><body>
   <header>
     <nav class="navbar">
       <div class="container">
@@ -26,7 +25,7 @@
         </div>
     </nav>
   </header>
-</body>
+
 <section class="main">
   <div class="summary">
     <div class="about-hackathon">
