--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                 <button>Subscribe</button>
               </div>
               <div class="news-card enter-discussion">
-                <span class="news-card-img" style="margin-top: 0">
-                  <img href=""
-                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--frEr8YRl--/c_fill,f_auto,fl_progressive,h_50,q_auto,w_50/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/162988/b604f249-a248-4582-80e3-4a781d054e3f.jpeg"
+                <span class="news-card-img" style="margin-top: 0;flex-grow: 0;">
+                  <img href="" class="add-dis-img"
+                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--RmY55OKL--/c_limit,f_auto,fl_progressive,q_auto,w_256/https://practicaldev-herokuapp-com.freetls.fastly.net/assets/devlogo-pwa-512.png"
                     />
-                </span><textarea placeholder="Comment here..."></textarea>
+                </span><textarea placeholder="Add to discussion..."></textarea>
               </div>
               <div class="news-card">
                 <span class="news-card-img">
