--- a/index.html
+++ b/index.html
@@ -1273,9 +1273,9 @@
                         <img href=""
                             src="https://res.cloudinary.com/practicaldev/image/fetch/s--Vce2LydN--/c_fill,f_auto,fl_progressive,h_50,q_auto,w_50/https://dev-to-uploads.s3.amazonaws.com/uploads/organization/profile_image/1/0213bbaa-d5a1-4d25-9e7a-10c30b455af0.png" />
                         <div>
-                            <strong>JANE DOE</strong>&nbsp; <span> for</span>
+                            <strong class="announced-by">JANE DOE</strong>&nbsp; <span style="font-size:1rem"> for</span>
                             <a href="">THE DEV TEAM</a>
-                            <span style="display: block; line-height: 2px"> On 12 Apr</span>
+                            <span style="display: block; line-height: 7px" class="announced-on"> On 12 Apr</span>
                         </div>
                     </div>
                     <h1>Announcing the Appwrite Hackathon on DEV!</h1>
