--- a/index.html
+++ b/index.html
@@ -1514,7 +1514,19 @@
                     </p>
                     <p>Happy coding!</p><br>
 
-                    <div class="dicussions">
+
+</div>
+<!-- end event details -->
+
+
+
+
+
+
+
+
+
+                    <div class="discussions">
                       <div class="discuss-top">
                         <h2>Discussion(34)</h2>
                         <button>Subscribe</button>
@@ -2055,7 +2067,7 @@
                             })
                         }
                     </script>
-                </div>
+                
             </div><!-- end about hackathon -->
             <div class="read-next">
                 <h2>Read next</h2>
