--- a/index.html
+++ b/index.html
@@ -1536,8 +1536,8 @@
                     <p>We cannot wait to see how you approach this fun challenge - and
                         the amazing applications you come up with.
                     </p>
-                    <p>Happy coding!</p><br>
-    <div class="d-flex justify-content-center my-3">
+                    <p>Happy coding!</p>
+    <div class="d-flex justify-content-center my-3 py-5">
    <button class="btn improve">Improve Article</button>
    <button class="btn report-article">Report Issue</button>
    <button class="btn save-article">Save Article</button>
