--- a/index.html
+++ b/index.html
@@ -1538,9 +1538,10 @@
                     </p>
                     <p>Happy coding!</p>
     <div class="d-flex justify-content-center my-3 py-5">
+        <button class="btn like-article">Like</button>
    <button class="btn improve">Improve Article</button>
-   <button class="btn report-article">Report Issue</button>
-   <button class="btn save-article">Save Article</button>
+   <button class="btn report-article">Report</button>
+   <button class="btn save-article">Save</button>
    </div>
                 </div>
                 <!-- end event details -->
@@ -2655,15 +2656,10 @@
                 <span>Daryl Lukas - Jun 26 '21</span>
             </div>
         </div>
-        <!-- <div class="bottom">
-            <div class="d-flex gap-2 justify-content-center">
-            <button type="button" class="btn improve"><a href="" class="text-decoration-none ">Improve Article</a></button>
-            <button type="button" class="btn view-discussions"><a href="" class="text-decoration-none">view Discussions</a></button>
-            </div>
-        </div> -->
+       
     </div>
     <!-- end read-next -->
-    <!-- </div> -->
+    
     </div>
     <!-- end summary -->
     <div class="dev-team">
