--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
                         the amazing applications you come up with.
                     </p>
                     <p>Happy coding!</p>
-    <div class="d-flex justify-content-center my-3 py-5">
+    <div class="d-flex justify-content-center my-3 py-5 gap-1 gap-sm-3 gap-md-4">
         <button class="btn like-article">Like</button>
    <button class="btn improve">Improve Article</button>
    <button class="btn report-article">Report</button>
